--- a/.gitignore
+++ b/.gitignore
@@ -13,18 +13,18 @@ local.properties
 .signing/
 
 # User-specific configurations
-.idea/libraries/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/.name
-.idea/compiler.xml
-.idea/copyright/profiles_settings.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/vcs.xml
-*.iml
+/*/.idea/libraries/
+/*/.idea/workspace.xml
+/*/.idea/tasks.xml
+/*/.idea/.name
+/*/.idea/compiler.xml
+/*/.idea/copyright/profiles_settings.xml
+/*/.idea/encodings.xml
+/*/.idea/misc.xml
+/*/.idea/modules.xml
+/*/.idea/scopes/scope_settings.xml
+/*/.idea/vcs.xml
+/*/*.iml
 
 # OS-specific files
 .DS_Store
