--- a/Aplikacja/app/build.gradle
+++ b/Aplikacja/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:percent:23.4.0'
+    compile 'com.android.support:design:23.4.0'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'io.reactivex:rxkotlin:0.55.0'
