Make fab move with the keyboard

--- a/Aplikacja/app/src/main/AndroidManifest.xml
+++ b/Aplikacja/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".edititem.EditItemActivity"/>
+        <activity android:name=".edititem.EditItemActivity"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
