--- a/Aplikacja/app/build.gradle
+++ b/Aplikacja/app/build.gradle
@@ -2,6 +2,22 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.0'
+    }
+}
+apply plugin: 'spoon'
+
+spoon {
+    // for debug output
+    debug = true
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
