--- a/.gitignore
+++ b/.gitignore
@@ -14,16 +14,20 @@ local.properties
 
 # User-specific configurations
 **/.idea/libraries/
+**/.idea/dictionaries/
 **/.idea/workspace.xml
 **/.idea/tasks.xml
 **/.idea/.name
 **/.idea/compiler.xml
+**/.idea/copyright/profiles_settings.xml
 **/.idea/copyright/profiles_settings.xml
 **/.idea/encodings.xml
 **/.idea/misc.xml
 **/.idea/modules.xml
 **/.idea/scopes/scope_settings.xml
 **/.idea/vcs.xml
+**/.idea/jsLibraryMappings.xml
+**/.idea/gradle.xml
 *.iml
 
 # OS-specific files
